[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "confluence-2-md"
version = "0.1.0"
description = "Convert Confluence pages to Markdown"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.0",
    "markdownify>=0.13",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
confluence2md = "confluence_2_md.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/confluence_2_md"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-httpx>=0.30", "respx>=0.21"]
